--- a/src/404.html
+++ b/src/404.html
@@ -88,7 +88,7 @@
               <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -132,7 +132,7 @@
                     <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -175,16 +175,18 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -195,27 +197,9 @@
     </header>
 
     <main>
-      <section class="sub-mv">
-        <div class="sub-mv__inner">
-          <picture class="sub-mv__img">
-            <source
-              media="(max-width: 768px)"
-              srcset="./assets/images/sub/site-map-sp-img.jpg"
-            />
-            <img
-              src="./assets/images/sub/site-map-pc-img.jpg"
-              alt="たくさんの小魚が海の中を泳いでいる様子"
-            />
-          </picture>
-        </div>
-        <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Site MAP</h2>
-        </div>
-      </section>
-
-      <div class="sub-site-map layout-sub-thanks decoration">
-        <div class="sub-site-map__inner inner">
-          <div class="sub-site-map__breadcrumb breadcrumb">
+      <div class="error layout-error">
+        <div class="error__inner inner">
+          <div class="error__breadcrumb breadcrumb breadcrumb--white">
             <div class="breadcrumb__inner">
               <!-- Breadcrumb NavXTで出力される部分 ここから -->
               <span>
@@ -225,174 +209,29 @@
               </span>
               &nbsp;&gt;&nbsp;
               <span>
-                <span class="breadcrumb__current-item">サイトマップ</span>
+                <span class="breadcrumb__current-item">404</span>
               </span>
               <!-- Breadcrumb NavXTで出力される部分 ここまで -->
             </div>
           </div>
 
-          <div class="sub-site-map__content">
-            <div class="sub-site-map__nav nav-contents">
-              <nav class="nav-contents__wrap nav-contents__wrap--gap">
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./campaign.html">キャンペーン</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス取得</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">貸切体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ナイトダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./about-us.html">私たちについて</a>
-                    </div>
-                  </li>
-                </ul>
-
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./voice.html">お客様の声</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">料金一覧</a>
-                    </div>
-                    <ul class="nav-contents__items">
-                      <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./information.html">ダイビング情報</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス講習</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ファンダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./blog.html">ブログ</a>
-                    </div>
-                  </li>
-                </ul>
-
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">よくある質問</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#"
-                        >プライバシー<br class="u-mobile" />ポリシー</a
-                      >
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">利用規約</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">お問い合わせ</a>
-                    </div>
-                  </li>
-                </ul>
-              </nav>
+          <div class="error__content">
+            <h1 class="error__title">404</h1>
+            <div class="error__text-wrap">
+              <p class="error__text">申し訳ありません。</p>
+              <p class="error__text">お探しのページが見つかりません。</p>
+            </div>
+            <div class="error__button">
+              <a href="./index.html" class="button button--white">
+                <span>Page TOP</span>
+              </a>
             </div>
           </div>
         </div>
       </div>
-
-      <section class="contact layout-contact">
-        <div class="contact__inner inner">
-          <div class="contact__wrap">
-            <div class="contact__info">
-              <div class="contact__logo">
-                <img
-                  src="./assets/images/common/contact-logo.svg"
-                  alt="CodeUpsのロゴ"
-                />
-              </div>
-              <div class="contact__detail">
-                <div class="contact__lists-wrap">
-                  <ul class="contact__lists">
-                    <li class="contact__list">沖縄県那覇市1-1</li>
-                    <li class="contact__list">TEL:0120-000-0000</li>
-                    <li class="contact__list">営業時間:8:30-19:00</li>
-                    <li class="contact__list">定休日:毎週火曜日</li>
-                  </ul>
-                </div>
-
-                <div class="contact__map-wrap">
-                  <div class="contact__map">
-                    <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d57269.05009306561!2d127.63670374973589!3d26.218932030701666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m5!1s0x34e5698332101cf9%3A0xa001fb75096d7c18!2z44CSOTAwLTAwMzIg5rKW57iE55yM6YKj6KaH5biC5p2-5bGx77yR5LiB55uu!3m2!1d26.2188609!2d127.6779035!4m0!5e0!3m2!1sja!2sjp!4v1712753897717!5m2!1sja!2sjp"
-                      width="600"
-                      height="450"
-                      style="border: 0"
-                      allowfullscreen=""
-                      loading="lazy"
-                      referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="contact__contents">
-              <div class="contact__header section-header">
-                <p class="section-header__title section-header__title--contact">
-                  Contact
-                </p>
-                <h2 class="section-header__sub section-header__sub--contact">
-                  お問い合わせ
-                </h2>
-                <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
-              </div>
-              <div class="contact__button">
-                <a href="#" class="button">
-                  <span>Contact us</span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--404">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -490,13 +329,15 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
