--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -88,7 +88,7 @@
               <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -132,7 +132,7 @@
                     <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -175,7 +175,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
@@ -184,7 +184,7 @@
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -209,13 +209,13 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Site MAP</h2>
+          <h2 class="sub-page-title__main">Privacy Policy</h2>
         </div>
       </section>
 
-      <div class="sub-site-map layout-sub-thanks decoration">
-        <div class="sub-site-map__inner inner">
-          <div class="sub-site-map__breadcrumb breadcrumb">
+      <div class="privacy-policy layout-privacy-policy decoration">
+        <div class="privacy-policy__inner inner">
+          <div class="privacy-policy__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
               <!-- Breadcrumb NavXTで出力される部分 ここから -->
               <span>
@@ -225,112 +225,91 @@
               </span>
               &nbsp;&gt;&nbsp;
               <span>
-                <span class="breadcrumb__current-item">サイトマップ</span>
+                <span class="breadcrumb__current-item"
+                  >プライバシーポリシー</span
+                >
               </span>
               <!-- Breadcrumb NavXTで出力される部分 ここまで -->
             </div>
           </div>
 
-          <div class="sub-site-map__content">
-            <div class="sub-site-map__nav nav-contents">
-              <nav class="nav-contents__wrap nav-contents__wrap--gap">
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./campaign.html">キャンペーン</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス取得</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">貸切体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ナイトダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./about-us.html">私たちについて</a>
-                    </div>
-                  </li>
-                </ul>
+          <div class="privacy-policy__content">
+            <h2 class="privacy-policy__title">プライバシーポリシー</h2>
 
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./voice.html">お客様の声</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">料金一覧</a>
-                    </div>
-                    <ul class="nav-contents__items">
-                      <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
-                      </li>
-                    </ul>
+            <div class="privacy-policy__wrap">
+              <p class="privacy-policy__text">
+                以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。
+              </p>
+              <div class="privacy-policy__box">
+                <ol class="privacy-policy__lists">
+                  <li class="privacy-policy__list">
+                    概要
+                    当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。
                   </li>
-                </ul>
+                  <li class="privacy-policy__list">
+                    収集する情報
+                    当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。
+                  </li>
+                </ol>
+              </div>
 
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./information.html">ダイビング情報</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス講習</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ファンダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./blog.html">ブログ</a>
-                    </div>
+              <div class="privacy-policy__box">
+                <p class="privacy-policy__text">
+                  また、当社のサイトを閲覧する際に、IPアドレス、ブラウザの種類、言語設定、アクセス日時などの情報も収集する場合があります。
+                </p>
+                <ol class="privacy-policy__lists">
+                  <li class="privacy-policy__list">
+                    情報の使用
+                    当社は、お客様から収集した個人情報を、以下の目的で使用することがあります。
                   </li>
-                </ul>
+                </ol>
+              </div>
 
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">よくある質問</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#"
-                        >プライバシー<br class="u-mobile" />ポリシー</a
-                      >
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">利用規約</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">お問い合わせ</a>
-                    </div>
+              <div class="privacy-policy__box">
+                <p class="privacy-policy__text">
+                  ・お客様からのお問い合わせやサポートの提供
+                  ・当社のサービスや製品の提供
+                  ・当社のサイトの改善や新しいサービスの開発
+                  ・法律や規制に基づく義務の履行
+                </p>
+
+                <ol class="privacy-policy__lists">
+                  <li class="privacy-policy__list">
+                    情報の共有
+                    当社は、お客様から収集した個人情報を、以下の場合に限り第三者に提供することがあります。
                   </li>
-                </ul>
-              </nav>
+                </ol>
+              </div>
+
+              <div class="privacy-policy__box">
+                <p class="privacy-policy__text">
+                  ・お客様の同意がある場合 ・法律や規制に基づく場合
+                  ・当社が信頼できると判断した業務委託先に必要な範囲で提供する場合
+                </p>
+
+                <ol class="privacy-policy__lists">
+                  <li class="privacy-policy__list">
+                    セキュリティ
+                    当社は、お客様の個人情報を適切に保護するために、適切な安全対策を講じます。個人情報への不正アクセス、紛失、改ざん、漏洩等を防止するための措置を講じます。
+                  </li>
+                  <li class="privacy-policy__list">
+                    Cookieの使用
+                    当社は、お客様により良いサイトの利用体験を提供するために、Cookieを使用する場合があります。Cookieは、お客様が当社のサイトを訪れた際に、お客様のブラウザに保存される小さなデータファイルです。Cookieには個人情報は含まれません。
+                  </li>
+                  <li class="privacy-policy__list">
+                    お問い合わせ先
+                    当社のプライバシーポリシーに関するご質問やご意見は、以下の連絡先までお問い合わせください。
+                    [会社名] [住所] [電話番号] [メールアドレス]
+                  </li>
+                  <li class="privacy-policy__list">
+                    プライバシーポリシーの変更
+                    当社は、必要に応じて本プライバシーポリシーを変更することがあります。変更後のプライバシーポリシーは、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。
+                  </li>
+                </ol>
+              </div>
+              <p class="privacy-policy__text">
+                以上が、当社のプライバシーポリシーの概要です。お客様の個人情報保護のために、常に努めてまいります。
+              </p>
             </div>
           </div>
         </div>
@@ -490,13 +469,15 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
