--- a/src/terms-of-service.html
+++ b/src/terms-of-service.html
@@ -88,7 +88,7 @@
               <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -132,7 +132,7 @@
                     <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -175,7 +175,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
@@ -184,7 +184,7 @@
                     <a href="#">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -209,13 +209,13 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Site MAP</h2>
+          <h2 class="sub-page-title__main">Terms of Service</h2>
         </div>
       </section>
 
-      <div class="sub-site-map layout-sub-thanks decoration">
-        <div class="sub-site-map__inner inner">
-          <div class="sub-site-map__breadcrumb breadcrumb">
+      <div class="terms-of-service layout-terms-of-service decoration">
+        <div class="terms-of-service__inner inner">
+          <div class="terms-of-service__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
               <!-- Breadcrumb NavXTで出力される部分 ここから -->
               <span>
@@ -225,112 +225,69 @@
               </span>
               &nbsp;&gt;&nbsp;
               <span>
-                <span class="breadcrumb__current-item">サイトマップ</span>
+                <span class="breadcrumb__current-item">利用規約</span>
               </span>
               <!-- Breadcrumb NavXTで出力される部分 ここまで -->
             </div>
           </div>
 
-          <div class="sub-site-map__content">
-            <div class="sub-site-map__nav nav-contents">
-              <nav class="nav-contents__wrap nav-contents__wrap--gap">
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./campaign.html">キャンペーン</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス取得</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">貸切体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ナイトダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./about-us.html">私たちについて</a>
-                    </div>
-                  </li>
-                </ul>
+          <div class="terms-of-service__content">
+            <h2 class="terms-of-service__title">利用規約</h2>
 
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./voice.html">お客様の声</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">料金一覧</a>
-                    </div>
-                    <ul class="nav-contents__items">
-                      <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
-                      </li>
-                      <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
-                      </li>
-                    </ul>
+            <div class="terms-of-service__wrap">
+              <p class="terms-of-service__text">
+                以下は、Webサイトで使用する一般的な利用規約の例です。
+              </p>
+              <div class="terms-of-service__box">
+                <ol class="terms-of-service__lists">
+                  <li class="terms-of-service__list">
+                    概要
+                    この利用規約は、当社が提供するサービスの利用に関する条件を定めたものです。本規約に同意いただくことで、当社のサービスを利用いただけます。なお、本規約に違反した場合、当社はサービスの提供を中止することがあります。
                   </li>
-                </ul>
+                  <li class="terms-of-service__list">
+                    サービスの利用
+                    当社のサービスは、お客様が自己責任において利用するものとし、当社はその利用に対して責任を負いません。また、当社はいつでも、サービスの提供を中止することができるものとします。
+                  </li>
+                  <li class="terms-of-service__list">
+                    禁止事項 お客様は、以下の行為を禁止します。
+                  </li>
+                </ol>
+                <p class="terms-of-service__text">
+                  ・当社のサービスに対して不正なアクセスをすること
+                  ・当社のサービスにおいて、他のユーザーに対して迷惑をかける行為をすること
+                  ・当社のサービスを商業目的で利用すること
+                  ・当社のサービスに関する知的財産権を侵害する行為をすること
+                  ・その他、法律や公序良俗に反する行為をすること
+                </p>
+              </div>
 
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./information.html">ダイビング情報</a>
-                    </div>
-                    <div>
-                      <ul class="nav-contents__items">
-                        <li class="nav-contents__item">
-                          <a href="#">ライセンス講習</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">体験ダイビング</a>
-                        </li>
-                        <li class="nav-contents__item">
-                          <a href="#">ファンダイビング</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="./blog.html">ブログ</a>
-                    </div>
+              <div class="terms-of-service__box">
+                <ol class="terms-of-service__lists">
+                  <li class="terms-of-service__list">
+                    知的財産権
+                    当社のサービスに関する知的財産権は、当社または当社にライセンスを許諾している者に帰属します。お客様は、当社の事前の承諾なしに、当社のサービスに関する知的財産権を使用することはできません。
                   </li>
-                </ul>
-
-                <ul
-                  class="nav-contents__contents nav-contents__contents--darkGreen"
-                >
-                  <li class="nav-contents__group">
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">よくある質問</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#"
-                        >プライバシー<br class="u-mobile" />ポリシー</a
-                      >
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">利用規約</a>
-                    </div>
-                    <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">お問い合わせ</a>
-                    </div>
+                  <li class="terms-of-service__list">
+                    免責事項
+                    当社は、当社のサービスに関連して発生した損害について、一切の責任を負わないものとします。また、当社は、当社のサービスにより提供される情報の正確性、信頼性、完全性、適時性についても一切保証しません。
                   </li>
-                </ul>
-              </nav>
+                  <li class="terms-of-service__list">
+                    プライバシー
+                    当社は、お客様の個人情報を適切に保護するために、個人情報保護方針に従って適切な取扱いを行います。
+                  </li>
+                  <li class="terms-of-service__list">
+                    その他の規定
+                    本規約は、日本法に準拠して解釈されるものとし、当社とお客様は、本規約に関する紛争が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とすることに同意します。
+                  </li>
+                  <li class="terms-of-service__list">
+                    利用規約の変更
+                    当社は、必要に応じて本利用規約を変更することがあります。変更後の利用規約は、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。
+                  </li>
+                </ol>
+              </div>
+              <p class="terms-of-service__text">
+                以上が、当社の利用規約の概要です。お客様のサービス利用にあたっては、本規約をお読みいただき、同意いただける場合のみサービスをご利用ください。
+              </p>
             </div>
           </div>
         </div>
@@ -490,13 +447,15 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
                   <a href="#">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
